[package]
name = "klick"
version = "0.1.0"
authors = ["mental <m3nta1@yahoo.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
bit_field = "0.7.0"
bitflags = "1.0.0"
spin = "0.5.0"
rlibc = "1.0.0"
volatile = "0.2.6"
uart_16550 = "0.1.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.4.1"
raw-cpuid = "6.1.0"

[package.metadata.bootimage]
default-target = "common/target-x86_64.json"

[dependencies.lazy_static]
version = "1.2.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
incremental = false
overflow-checks = false
